--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,14 @@
-# Variables de entorno de ejemplo para StellarStay Hotels
+# Environment variables for StellarStay Hotels System
+# Database configuration
 POSTGRES_DB=stellarstay
-POSTGRES_USER=stellar
-POSTGRES_PASSWORD=stellar
-SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/stellarstay
-SPRING_DATASOURCE_USERNAME=stellar
-SPRING_DATASOURCE_PASSWORD=stellar
-RABBITMQ_HOST=localhost
-RABBITMQ_PORT=5672
-
+POSTGRES_USER=stellarstay_user
+POSTGRES_PASSWORD=stellarstay_pass
+DB_HOST=localhost           # Use 'db' for Docker, 'localhost' for local dev
+DB_PORT=5432
+DB_NAME=stellarstay
+DB_USER=stellarstay_user
+DB_PASSWORD=stellarstay_pass
+# Spring JPA config (optional, for advanced usage)
+SPRING_JPA_HIBERNATE_DDL_AUTO=update  # Use 'validate' or 'none' in production
+# Server port (optional)
+SERVER_PORT=8080
