feat(1): init api

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 POSTGRES_DB=stellarstay
 POSTGRES_USER=stellarstay_user
 POSTGRES_PASSWORD=stellarstay_pass
-DB_HOST=localhost           # Use 'db' for Docker, 'localhost' for local dev
+DB_HOST=db           # Use 'db' for Docker, 'localhost' for local dev
 DB_PORT=5432
 DB_NAME=stellarstay
 DB_USER=stellarstay_user
@@ -12,3 +12,5 @@ DB_PASSWORD=stellarstay_pass
 SPRING_JPA_HIBERNATE_DDL_AUTO=update  # Use 'validate' or 'none' in production
 # Server port (optional)
 SERVER_PORT=8080
+# Kafka configuration
+KAFKA_BOOTSTRAP_SERVERS=kafka:9092  # Use 'kafka:9092' for Docker, 'localhost:9092' for local dev
