--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,44 @@ services:
     networks:
       - stellarstay_net
 
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.5.0
+    container_name: stellarstay_zookeeper
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - "2181:2181"
+    networks:
+      - stellarstay_net
+
+  kafka:
+    image: confluentinc/cp-kafka:7.5.0
+    container_name: stellarstay_kafka
+    depends_on:
+      - zookeeper
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092,PLAINTEXT_HOST://0.0.0.0:29092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    ports:
+      - "9092:9092"
+      - "29092:29092"
+    networks:
+      - stellarstay_net
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: stellarstay_prometheus
+    volumes:
+      - ./prometheus.docker.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    networks:
+      - stellarstay_net
+
   app:
     build: .
     container_name: stellarstay_app
@@ -25,10 +63,13 @@ services:
       DB_PASSWORD: ${POSTGRES_PASSWORD}
       SPRING_JPA_HIBERNATE_DDL_AUTO: ${SPRING_JPA_HIBERNATE_DDL_AUTO:-update}
       SERVER_PORT: ${SERVER_PORT:-8080}
+      KAFKA_BOOTSTRAP_SERVERS: kafka:9092
     ports:
       - "8080:8080"
     depends_on:
       - db
+      - kafka
+      - prometheus
     networks:
       - stellarstay_net
 
