--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -63,7 +63,7 @@ networks:
     driver: bridge
 
 # Usage:
-# 1. Copy .env.example to .env and adjust values as needed.
+# 1. Copy .env.dev.example to .env.dev and adjust values as needed.
 # 2. Run: docker compose -f docker-compose.dev.yml up -d
 #
 # This will start only the dependencies (no app service).
