feat(1): init api

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,6 +76,19 @@ services:
     networks:
       - stellarstay_net
 
+  kafka-ui:
+    image: provectuslabs/kafka-ui:latest
+    container_name: kafka_ui
+    ports:
+      - "8081:8080"
+    environment:
+      - KAFKA_CLUSTERS_0_NAME=local
+      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka:9092
+    depends_on:
+      - kafka
+    networks:
+      - stellarstay_net
+
 volumes:
   db_data:
 
