feat(1): init api

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,8 @@ spring:
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
     listener:
       missing-topics-fatal: false
+    topic:
+      reservations: ${KAFKA_TOPIC_RESERVATIONS}
 
 server:
   port: ${SERVER_PORT}
