feat(1): init api

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,10 +34,12 @@ management:
   endpoints:
     web:
       exposure:
-        include: "*"
+        include: health,info,prometheus
   endpoint:
     health:
       show-details: always
+    prometheus:
+      enabled: true
   prometheus:
     metrics:
       export:
