--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,8 +51,9 @@ logging:
   level:
     org.hibernate.SQL: OFF
     org.hibernate.type.descriptor.sql.BasicBinder: OFF
+
 resilience4j:
-  bulkhead:
+  thread-pool-bulkhead:
     instances:
       reservationBulkhead:
         maxThreadPoolSize: 50   # Allows up to 50 concurrent reservations
