--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -55,7 +55,7 @@ resilience4j:
     instances:
       reservationBulkhead:
         maxThreadPoolSize: 50   # Allows up to 50 concurrent reservations
-        coreThreadPoolSize: 20 # Core of threads for basic concurrency
-        queueCapacity: 200     # Up to 200 requests on hold if the limit is exceeded
+        coreThreadPoolSize: 20 # Core thread pool for basic concurrency
+        queueCapacity: 200     # Up to 200 requests will wait if the limit is exceeded
         executorService:
           beanName: reservationTaskExecutor
