feat(1): init api

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,4 @@ SPRING_JPA_HIBERNATE_DDL_AUTO=update  # Use 'validate' or 'none' in production
 SERVER_PORT=8080
 # Kafka configuration
 KAFKA_BOOTSTRAP_SERVERS=kafka:9092  # Use 'kafka:9092' for Docker, 'localhost:9092' for local dev
+KAFKA_TOPIC_RESERVATIONS=reservations
