--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   db:
     image: postgres:15-alpine
@@ -67,6 +66,7 @@ services:
       SPRING_JPA_HIBERNATE_DDL_AUTO: ${SPRING_JPA_HIBERNATE_DDL_AUTO:-update}
       SERVER_PORT: ${SERVER_PORT:-8080}
       KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+      KAFKA_TOPIC_RESERVATIONS: ${KAFKA_TOPIC_RESERVATIONS}
     ports:
       - "8080:8080"
     depends_on:
@@ -75,6 +75,8 @@ services:
       - prometheus
     networks:
       - stellarstay_net
+    volumes:
+      - ./target:/app/target
 
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
