feat(1): init api

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,8 +99,8 @@ networks:
     driver: bridge
 
 # Usage:
-# 1. Copy .env.dev to .env.dev and adjust values as needed.
-# 2. Run: docker-compose up --build
+# 1. Copy .env.example to .env.prod and adjust values as needed.
+# 2. Run: docker compose -f docker-compose.yml --env-file .env.prod up -d
 #
+# This will start the dependencies and the app service.
 # All configuration is managed via environment variables.
-# For local development, set DB_HOST=localhost in .env.dev and run the app outside Docker.
