--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -76,8 +76,8 @@ networks:
     driver: bridge
 
 # Usage:
-# 1. Copy .env.dev.example to .env.dev and adjust values as needed.
-# 2. Run: docker compose -f docker-compose.dev.yml up -d
+# 1. Copy .env.example to .env.dev and adjust values as needed.
+# 2. Run: docker compose -f docker-compose.dev.yml --env-file .env.dev up -d
 #
 # This will start only the dependencies (no app service).
 # Run the Spring Boot app from IntelliJ or your IDE.
