--- a/.env.example
+++ b/.env.example
@@ -3,15 +3,18 @@
 POSTGRES_DB=stellarstay
 POSTGRES_USER=stellarstay_user
 POSTGRES_PASSWORD=stellarstay_pass
-DB_HOST=db           # Use 'db' for Docker, 'localhost' for local dev
+# Use 'db' for Docker, 'localhost' for local dev
+DB_HOST=db
 DB_PORT=5432
 DB_NAME=stellarstay
 DB_USER=stellarstay_user
 DB_PASSWORD=stellarstay_pass
 # Spring JPA config (optional, for advanced usage)
-SPRING_JPA_HIBERNATE_DDL_AUTO=none  # Use 'validate' or 'none' in production
+# Use 'validate' or 'none' in production
+SPRING_JPA_HIBERNATE_DDL_AUTO=none
 # Server port (optional)
 SERVER_PORT=8080
 # Kafka configuration
-KAFKA_BOOTSTRAP_SERVERS=kafka:9092  # Use 'kafka:9092' for Docker, 'localhost:29092' for local dev
+# Use 'kafka:9092' for Docker, 'localhost:29092' for local dev
+KAFKA_BOOTSTRAP_SERVERS=kafka:9092
 KAFKA_TOPIC_RESERVATIONS=reservations
